@@ -37,6 +37,14 @@
 #define GPIO_LED	GPIOC_LED
 #define IOPORT_LED	GPIOC
 
+/* NeuG settings for ADC2.  */
+#define NEUG_ADC_SETTING2_SMPR1 ADC_SMPR1_SMP_AN10(ADC_SAMPLE_1P5) \
+                              | ADC_SMPR1_SMP_AN11(ADC_SAMPLE_1P5)
+#define NEUG_ADC_SETTING2_SMPR2 0
+#define NEUG_ADC_SETTING2_SQR3  ADC_SQR3_SQ1_N(ADC_CHANNEL_IN10)   \
+                              | ADC_SQR3_SQ2_N(ADC_CHANNEL_IN11)
+#define NEUG_ADC_SETTING2_NUM_CHANNELS 1
+
 /*
  * Board identifier.
  */
@@ -117,15 +125,15 @@
 
 /*
  * Port C setup.
- * PC0  - Push Pull output 50MHz.
- * PC1  - Push Pull output 50MHz.
+ * PC0  - Digital input with PullUp.  AN10
+ * PC1  - Digital input with PullUp.  AN11
  * Everything input with pull-up except:
  * PC6  - Normal input because there is an external resistor.
  * PC7  - Normal input because there is an external resistor.
  * PC11 - Open Drain output (USB disconnect).
  * PC12 - Push Pull output (LED).
  */
-#define VAL_GPIOCCRL            0x44888833      /*  PC7...PC0 */
+#define VAL_GPIOCCRL            0x44888888      /*  PC7...PC0 */
 #define VAL_GPIOCCRH            0x88837888      /* PC15...PC8 */
 #define VAL_GPIOCODR            0xFFFFFFFF
 
