@@ -1,8 +1,12 @@
 2012-10-01  Niibe Yutaka  <gniibe@fsij.org>
 
-	* tool/neug_check.py: New.
-
 	* src/random.c (adcgrpcfg): ADC1 and ADC2 two channels, each.
+	* boards/FST_01/board.h: Use default ADC settings.
+	* boards/OLIMEX_STM32_H103/board.h (NEUG_ADC_SETTING2_SMPR1)
+	(NEUG_ADC_SETTING2_SMPR2, NEUG_ADC_SETTING2_SQR3)
+	(NEUG_ADC_SETTING2_NUM_CHANNELS): Define.
+
+	* tool/neug_check.py: New.
 	* src/main.c (neug_setup, USB_NEUG_GET_ERR_COUNT): New.
 
 2012-09-28  Niibe Yutaka  <gniibe@fsij.org>
